[package]
name = "ethabi"
version = "9.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://github.com/paritytech/ethabi"
license = "MIT/Apache-2.0"
keywords = ["ethereum", "eth", "abi", "solidity", "cli"]
description = "Easy to use conversion of ethereum contract calls to bytecode."

[dependencies]
rustc-hex = { version = "2.0", default-features = false }
serde = { version = "1.0", default-features = false,  optional = true }
serde_json = { version = "1.0", default-features = false,  optional = true }
serde_derive = { version = "1.0", default-features = false,  optional = true }
tiny-keccak = { version = "1.4", features = ["keccak"], optional = true }
error-chain = { version = "0.12", default-features = false,  optional = true }
ethereum-types = { git = "https://github.com/darwinia-network/parity-common.git", default-features = false }
rstd = { package = "sr-std", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop", default-features = false }


[dev-dependencies]
hex-literal = "0.2.0"
paste = "0.1.5"

[features]
default = ["std"]
std = [
    "rustc-hex/std",
    "serde/std",
    "serde_json",
    "rstd/std",
    "serde_derive",
    "tiny-keccak",
    "error-chain",
    "ethereum-types/std",
]
backtrace = ["error-chain/backtrace"]

[badges]
travis-ci = { repository = "paritytech/ethabi", branch = "master" }
coveralls = { repository = "paritytech/ethabi", branch = "master" }
